Testando eventos, mock e suite
