# crud-com-auth-jwt/internal/infra/webserver/error_response/error_response.go
@@ -1,0 +1,7 @@
+package error_response
+
+type ErrorResponse struct {
+	Success bool        `json:"success"`
+	Message string      `json:"message,omitempty"`
+	Errors  interface{} `json:"errors,omitempty"`
+}
